--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@
 
 	* src/Makefile.am (inkscapelib_src):
 	marker-status.h, marker-status.cpp: New files.
-	* src/style.cpp, src/dialogs/stroke-style.cpp:
+	* src/dialogs/stroke-style.cpp, src/sp-shape.cpp, src/style.cpp:
 	Change marker debugging status messages from conditional g_message
 	to unconditional marker_status call.
 
