--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,23 @@
+2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/desktop-events.cpp (sp_dt_ruler_event): NR::Point'ification.
+
+	* src/selection.cpp (sp_selection_item_selected):
+	* src/seltrans.cpp (sp_sel_trans_stretch_request):
+	* src/display/nr-arena-shape.cpp (shape_run_A8_OR):
+	* src/livarot/PathStroke.cpp (DoJoin):
+	* src/livarot/ShapeMisc.cpp (ReFormeBezierTo):
+	Address compiler warnings.
+
 2004-02-28  Jon Phillips <jon@protofunk.org>
 
-    * share/*: Move extensions, icons, and made a new folder screens for 
-      screens that are pulled up in using inkscape. Please test this heavily 
-      as it implements the most troublesome chunks of the dir. reorganization.
-    
-    * Makefile.am Makefile.mingw config.h.mingw configure.in: I changed these 
-      all to coincide with the new changes.
+	* share/*: Move extensions, icons, and made a new folder screens
+	for screens that are pulled up in using inkscape.  Please test
+	this heavily as it implements the most troublesome chunks of the
+	directory reorganization.
+
+	* Makefile.am Makefile.mingw config.h.mingw configure.in:
+	Changed to coincide with the new changes.
 
 2004-02-28  Nathan Hurst <njh@mail.csse.monash.edu.au>
 
