--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-05  Ted Gould  <ted@gould.cx>
+
+	* src/Makefile.am: Adding back in inkview.  This was fixed by
+	Bob, but he didn't add it back in.  It's back in the build now.
+	Thanks Bob for fixing my mistakes!
+
 2004-03-04  Ted Gould  <ted@gould.cx>
 
 	* src/extension/extension.h: Cleaning up and adding comments.
