--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  MenTaLguY  <mental@rydia.net>
+
+    * src/sp-text.cpp: fixes for initialization and updating of SPString
+
 2004-03-07  MenTaLguY  <mental@rydia.net>
 
     * src/sp-item.cpp: the item's arenaitems shouldn't be destroyed until
