--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  MenTaLguY  <mental@rydia.net>
+
+    * src/sp-text.cpp: fixed uninitialized variable
+
 2004-03-08  MenTaLguY  <mental@rydia.net>
 
     * src/sp-text.cpp: fixes for initialization and updating of SPString
